flickering navbar fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
 
 html {
   /* overflow: hidden; */
-  margin-left: calc(100vw - 100%);
+  /* margin-left: calc(100vw - 100%); */
 }
 
 a {
